# cascade

./: .env.release.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ENGINEERING_ROADMAP.md  IMPLEMENTATION_PLAN.md  PRODUCT_ROADMAP.md  PROGRESS.md  README.md  RENDER_REFACTOR_PLAN.md  ROADMAP.md  VIEWER_RENDERING_ANALYSIS.md  VIEWER_RENDERING_FLOW_DIAGRAMS.md  VIEWER_RENDERING_PATTERNS.md  VIEWER_RENDERING_README.md  compositor-snapshot.md  implementation-plans.md  package.json
.agents/skills/cascade-pr-review/: SKILL.md
.agents/skills/cascade-release/: SKILL.md
.agents/skills/create-feature/: SKILL.md
.claude/skills/: cascade-pr-review
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy-pr-preview.yml  deploy-web.yml  release.yml
.opencode/skills/testing/: SKILL.md
.sisyphus/: boulder.json
.sisyphus/plans/: migration-architecture.md  selective-viewer-invalidation.md
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/icons/: icon.icns
apps/tauri/src-tauri/src/: lib.rs  main.rs  menu.rs  project_package.rs
apps/web/: .stylelintrc.json  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
apps/web/e2e/: exr.spec.ts  (+17 more)
crates/cascade-core/: Cargo.toml
crates/cascade-core/src/: ai.rs  color.rs  error.rs  eval.rs  exr.rs  graph.rs  group.rs  lib.rs  node.rs  types.rs
crates/cascade-core/tests/: basic.rs  gen_exr_fixtures.rs
crates/cascade-gpu/: Cargo.toml
crates/cascade-nodes-std/: Cargo.toml
crates/cascade-ocio/: Cargo.toml
crates/cascade-ocio-sys/: Cargo.toml  build.rs  ocio_wrapper.cpp  ocio_wrapper.h
crates/cascade-runtime/: Cargo.toml
crates/cascade-runtime/src/: ai_provider.rs  builtin_groups.rs  cnode.rs  document.rs  lib.rs
crates/cascade-runtime/src/migrations/: mod.rs  v1_1_0_to_v1_2_0.rs  v1_2_0_to_v1_3_0.rs  v1_3_0_to_v1_4_0.rs
crates/cascade-video/: Cargo.toml
crates/cascade-video/src/: bench.rs  lib.rs
crates/cascade-wasm/: Cargo.toml
crates/cascade-wasm/src/: ai_provider.rs  lib.rs
crates/compositor-core/: Cargo.toml
crates/compositor-core/src/: ai.rs  color.rs  error.rs  eval.rs  graph.rs  group.rs  lib.rs  node.rs  types.rs
crates/compositor-core/tests/: basic.rs
crates/compositor-gpu/: Cargo.toml
crates/compositor-gpu/src/: context.rs  kernel_node.rs  kuwahara.rs  lib.rs  manifest.rs  template.rs  transpile.rs
crates/compositor-nodes-std/: Cargo.toml
crates/compositor-nodes-std/benches/: node_benchmarks.rs
crates/compositor-nodes-std/src/: ai.rs  blend.rs  color.rs  color_convert.rs  color_ops.rs  filter.rs  filter_ops.rs  generate.rs  group.rs  input.rs  lib.rs  mask_utils.rs  matte.rs  output.rs  palette.rs  script.rs  transform.rs  utility.rs
crates/compositor-ocio/: Cargo.toml
crates/compositor-ocio-sys/: Cargo.toml  build.rs
crates/compositor-runtime/: Cargo.toml
crates/compositor-runtime/src/: ai_provider.rs  builtin_groups.rs  document.rs  lib.rs
crates/compositor-runtime/src/migrations/: mod.rs  v1_0_0_to_v1_1_0.rs
crates/compositor-video/: Cargo.toml
crates/compositor-video/src/: bench.rs  lib.rs
crates/compositor-wasm/: Cargo.toml
crates/compositor-wasm/src/: ai_provider.rs  lib.rs
docs/: ENGINEERING_ROADMAP.md  PRODUCT_ROADMAP.md  PROGRESS.md  Technical Debt.md  analytics.md
docs/architecture/: ARCHITECTURE.md  compositing.md
docs/design/: format-resolution-awareness.md
implementation-plans/: about-modal-actions.md  ai-assistant.md  ai-gpu-dsl-apply-chat-reset.md  ai-result-bundled-assets.md  animation-keyframe-system.md  batch-filmstrip-source-thumbnails.md  batch-image-functionality.md  batch-performance-pass.md  batch-thumbnail-contention-fix.md  bundled-casc-assets.md  cached-processed-batch-thumbnails.md  cascade-button-system.md  cascade-pr-review-skill.md  cnode-production-readiness.md  color-picker-input-lag.md  compare-viewer-node.md  cpu-node-removals.md  curve-inspector-and-pane-boundaries.md  custom-group-project-load-hydration.md  desktop-ai-node-background-jobs.md  desktop-live-preview-scaling.md  domain-aware-viewer.md  dsl-input-defaults-roundtrip.md  dsl-production-hardening.md  dsl-production-readiness.md  dsl-semantic-equivalence-tests.md  dsl-synthetic-param-inputs.md  edit-transaction-architecture.md  engine-preview-scaling.md  examples-pane.md  export-nodes-ai-dsl-editing.md  exr-performance-optimization.md  first-class-asset-dsl.md  gpt-image-2-default.md  gpu-cpu-node-unification.md  gpu-kernel-manifest-cleanup.md  gpu-script-input-controls.md  gpu-script-node-fixes.md  gpu-script-preview-scale-regression.md  graph-dsl.md  (+38 more)
implementation-plans/engineering/: phase-2-4-gpu-texture-pooling.md  phase-3-3-node-deletion-state-cleanup.md  phase-3-4-engine-bridge-split.md  phase-4-1-eval-session.md  phase-4-2-value-param-unification.md  phase-4-3-resource-store.md  phase-4-4-cascade-error-taxonomy.md  phase-4-5-format-propagation.md  phase-5-1-rust-error-path-testing.md  phase-5-2-frontend-component-tests.md  phase-5-3-ci-coverage-benchmarks.md  phase-6-1-async-render-pipeline.md  phase-6-2-tile-based-processing.md  phase-6-3-gpu-subgraph-batching.md  phase-6-4-multi-channel-aov.md  reconciliation.md
implementation-plans/roadmap/: 00-reconciliation.md  1.1-node-group-stability.md  1.2-ai-gpu-script-integration.md  1.3-ai-api-access.md  1.4-io-maturity.md  1.5-frontend-polish.md  2.1-templates-and-presets.md  2.2-share-as-url.md  2.3-project-organization.md  2.4-batch-headless-rendering.md  3.1-ai-assistant-polish.md  3.2-ai-gpu-shader-generation.md  3.3-ai-processing-nodes.md
reviews/: architecture-review-2-22-26.md  error-handling-plan.md
scripts/: README.md  bench-baseline.sh  local-macos-release.sh  release.sh  test-local-macos-release.sh
tauri-ipc-bench/: README.md  package-lock.json  package.json
tauri-ipc-bench/src-tauri/: Cargo.toml  tauri.conf.json
workers/proxy/: worker.js  wrangler.toml
(+311 files in other folders)
