[workspace]
resolver = "2"
members = [
    "crates/compositor-core",
    "crates/compositor-gpu",
    "crates/compositor-nodes-std",
    "crates/compositor-wasm",
    "crates/compositor-runtime",
    "crates/compositor-ocio-sys",
    "crates/compositor-ocio",
    "apps/tauri/src-tauri",
]
exclude = [
    "crates/compositor-video",
]

# Optimize dependencies in dev builds so image/rayon/etc aren't unusably slow.
# Our own crates stay at opt-level 0 for fast compile times.
[profile.dev.package."*"]
opt-level = 2

# Optimize our own compute-heavy crates in dev builds so image processing
# and the WASM bridge aren't unusably slow during development.
[profile.dev.package.compositor-nodes-std]
opt-level = 2

[profile.dev.package.compositor-core]
opt-level = 2

[profile.dev.package.compositor-wasm]
opt-level = 2

[profile.dev.package.compositor-video]
opt-level = 2
