[workspace]
resolver = "2"
members = [
    "crates/cascade-core",
    "crates/cascade-gpu",
    "crates/cascade-nodes-std",
    "crates/cascade-wasm",
    "crates/cascade-runtime",
    "crates/cascade-ocio-sys",
    "crates/cascade-ocio",
    "apps/tauri/src-tauri",
]
exclude = [
    "crates/cascade-video",
]

# Optimize dependencies in dev builds so image/rayon/etc aren't unusably slow.
# Our own crates stay at opt-level 0 for fast compile times.
[profile.dev.package."*"]
opt-level = 2

# Optimize our own compute-heavy crates in dev builds so image processing
# and the WASM bridge aren't unusably slow during development.
[profile.dev.package.cascade-nodes-std]
opt-level = 2

[profile.dev.package.cascade-core]
opt-level = 2

[profile.dev.package.cascade-wasm]
opt-level = 2

[profile.dev.package.cascade-video]
opt-level = 2
