[package]
name = "cascade-core"
version = "0.1.0"
edition = "2021"

[dependencies]
half = { version = "2", features = ["std", "serde"] }
slotmap = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ahash = "0.8"
web-time = "1.1"
smallvec = "1"
glam = "0.29"
rayon = "1"
uuid = { version = "1", features = ["v4"] }
exr = "1.74"

[dev-dependencies]
cascade-nodes-std = { path = "../cascade-nodes-std" }
image = { version = "0.25", default-features = false, features = ["png"] }
pollster = "0.4"
