[package]
name = "cascade-video"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
rayon = "1"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = { version = "0.6", features = ["exception"] }
objc2-av-foundation = { version = "0.3", features = ["AVVideoSettings", "AVAssetWriter", "AVAssetWriterInput", "objc2-core-media", "objc2-core-video", "block2", "AVAsset", "AVAssetReader", "AVAssetReaderOutput", "AVAssetTrack", "AVMediaFormat"] }
objc2-core-foundation = "0.3"
objc2-core-media = { version = "0.3", features = ["CMSampleBuffer", "CMTime", "CMTimeRange"] }
objc2-core-video = { version = "0.3", features = ["CVImageBuffer"] }
objc2-foundation = "0.3"

[[bin]]
name = "video-bench"
path = "src/bench.rs"
