[package]
name = "cascade-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cascade-core = { path = "../cascade-core" }
cascade-nodes-std = { path = "../cascade-nodes-std" }
cascade-gpu = { path = "../cascade-gpu" }
cascade-runtime = { path = "../cascade-runtime" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["console", "Request", "RequestInit", "Response", "Headers", "FormData", "Blob", "BlobPropertyBag", "Window", "Location"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slotmap = "1"
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
uuid = { version = "1", features = ["v4", "js"] }
pollster = "0.4"
