[package]
name = "compositor-gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
compositor-core = { path = "../compositor-core" }
wgpu = "24"
naga = { version = "24", features = ["glsl-in", "wgsl-out"] }
pollster = "0.4"
half = { version = "2", features = ["std"] }
bytemuck = { version = "1", features = ["derive"] }
ahash = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flume = "0.11"
