[package]
name = "compositor-nodes-std"
version = "0.1.0"
edition = "2021"

[dependencies]
compositor-core = { path = "../compositor-core" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "webp"] }
png = "0.18"
half = { version = "2", features = ["std"] }
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "node_benchmarks"
harness = false
