[package]
name = "compositor-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
compositor-core = { path = "../compositor-core" }
compositor-nodes-std = { path = "../compositor-nodes-std" }
compositor-gpu = { path = "../compositor-gpu" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
half = { version = "2", features = ["std"] }
slotmap = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
png = "0.18"
uuid = { version = "1", features = ["v4"] }
rayon = "1"

[[bin]]
name = "compositor-bench"
path = "src/bin/bench.rs"
