[package]
name = "compositor-runtime"
version = "0.1.0"
edition = "2021"

[features]
default = []
ocio = ["compositor-ocio"]

[dependencies]
compositor-core = { path = "../compositor-core" }
compositor-nodes-std = { path = "../compositor-nodes-std" }
compositor-gpu = { path = "../compositor-gpu" }
compositor-ocio = { path = "../compositor-ocio", optional = true }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
half = { version = "2", features = ["std"] }
slotmap = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
uuid = { version = "1", features = ["v4"] }
rayon = "1"
pollster = "0.4"

[[bin]]
name = "compositor-bench"
path = "src/bin/bench.rs"
