[package]
name = "compositor-video"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = { version = "0.6", features = ["exception"] }
objc2-av-foundation = { version = "0.3", features = ["AVVideoSettings", "AVAssetWriter", "AVAssetWriterInput", "objc2-core-media", "objc2-core-video", "block2"] }
objc2-core-foundation = "0.3"
objc2-core-media = "0.3"
objc2-core-video = "0.3"
objc2-foundation = "0.3"
