[package]
name = "compositor-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
compositor-runtime = { path = "../../../crates/compositor-runtime" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol", "video", "ocio"]
custom-protocol = ["tauri/custom-protocol"]
video = ["compositor-runtime/video"]
ocio = ["compositor-runtime/ocio"]
