[package]
name = "cascade-tauri"
version = "0.2.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cascade-runtime = { path = "../../../crates/cascade-runtime" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
regex = "1"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol", "video", "ocio"]
custom-protocol = ["tauri/custom-protocol"]
video = ["cascade-runtime/video"]
ocio = ["cascade-runtime/ocio"]
